--- a/PAGES/01b_basics/index.html
+++ b/PAGES/01b_basics/index.html
@@ -2874,7 +2874,7 @@ x &#61; 2   # &#96;x&#61;2&#96; is run, but anything after &#96;#&#96; won&#39;t
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Paths of Files and Folders</h2></p>
-<p>File management systems vary across operating systems, determining that the syntax for file paths also differs. To accommodate this, Julia provides two approaches. The first one provides an operating system-specific syntax. Below, we illustrate its application for a file <code>C:\user\file.jl</code> on Windows and <code>/user/file.jl</code> on Linux/macOS. There&#39;s also a platform-agnostic alternative that makes your code more portable, provided by the <code>joinpath</code> function. This is the preferred option, as the file paths can be used with any operating system.</p>
+<p>File management systems vary across operating systems, determining that the syntax for file paths also differs. To accommodate this, Julia provides two approaches. The first one provides an operating system-specific syntax. Below, we illustrate its application for a file <code>C:\user\file.jl</code> on Windows and <code>/user/file.jl</code> on Linux/macOS. There&#39;s also a platform-agnostic alternative to make your code more portable, provided by the <code>joinpath</code> function. This is the preferred option, as it can be used with any operating system.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2941,7 +2941,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;file.jl&quot;&#41;</code></p
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
