--- a/PAGES/04b_logical/index.html
+++ b/PAGES/04b_logical/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section lays the basics for incorporating conditions into our programs. Formally, conditions are defined as functions and operators that return true or false as their output. A common examples of condition is <code>x &gt; y</code>.</p>
-<p>To get the most out of this section, you should keep in mind the classification of operators discussed <a href="/julia_book/PAGES/02b_variables/#operators">here</a>. This establishes that operators can be categorized according to the number of operands they require. Specifically, <strong>unary operators</strong> act on a single operand and precede it &#40;i.e. <code>&lt;operator&gt;x</code>&#41;, whereas <strong>binary operators</strong> take two operands and are placed between them &#40;i.e. <code>x &lt;operator&gt; y</code>&#41;.</p>
+<p>This section lays the basics for incorporating conditions into our programs. Formally, conditions are defined as functions and operators that return true or false as their output. A common example of condition is <code>x &gt; y</code>.</p>
+<p>To get the most out of this section, you should keep in mind the classification of operators discussed <a href="/julia_book/PAGES/02b_variables/#operators">here</a>. This establishes that operators can be categorized according to their number of operands. Specifically, <strong>unary operators</strong> act on a single operand and precede it &#40;i.e. <code>&lt;operator&gt;x</code>&#41;, whereas <strong>binary operators</strong> take two operands and are placed between them &#40;i.e. <code>x &lt;operator&gt; y</code>&#41;.</p>
 <p>      </div>
     </div>
   </div>
@@ -3225,7 +3225,7 @@ is_one_positive  &#61; any.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
