--- a/PAGES/05e_slices/index.html
+++ b/PAGES/05e_slices/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section concludes the coverage of preliminary concepts for studying mutations. The focus is now on the behavior of a vector&#39;s <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span>. This is defined as a subset of a vector&#39;s elements, formally represented by <code>x&#91;&lt;indices&gt;&#93;</code>. </p>
-<p>Importantly, <strong>slices act differently depending on how they're included in a statement</strong>, behaving as either:</p>
+<p>This section concludes the coverage of preliminary concepts for studying mutations by focusing on the behavior of a vector&#39;s <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span>. This is defined as a subset of a vector&#39;s elements, formally represented by <code>x&#91;&lt;indices&gt;&#93;</code>. </p>
+<p>Importantly, <strong>slices act differently depending on how they're included in a statement</strong>, functioning as either:</p>
 <ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>copies</strong></span> of the original vector, thus creating a new object at a new memory address. </p>
 </li>
@@ -3020,7 +3020,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
