--- a/PAGES/06b_namedtuples/index.html
+++ b/PAGES/06b_namedtuples/index.html
@@ -3009,7 +3009,7 @@ tup &#61; &#40;x, &#41;</code></pre>
 <li><p><strong>Dictionaries are unordered</strong>: keys don&#39;t have any order attached.</p>
 </li>
 </ul></div>
-<p>Dictionaries are created using function <code>Dict</code>, with each argument representing key-value pairs denoted by <code>&lt;key&gt; &#61;&gt; &lt;value&gt;</code>.</p>
+<p>Dictionaries are created using the function <code>Dict</code>, with each argument consisting of a key-value pair denoted by <code>&lt;key&gt; &#61;&gt; &lt;value&gt;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3534,7 +3534,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
