--- a/PAGES/09c_objectsAllocating/index.html
+++ b/PAGES/09c_objectsAllocating/index.html
@@ -2834,7 +2834,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In <a href="/julia_book/PAGES/09b_onAllocations/">the previous section</a>, we introduced the fundamentals of memory allocations, highlighting that objects can be stored on either the heap or the stack. Furthermore, we emphasized on the conventional terminology used in programming and Julia, where <strong>allocations exclusively refer to those on the heap</strong>. This definition also gives rise to the expression that &quot;an object allocates&quot; when the object is stored on the heap.</p>
+<p>In <a href="/julia_book/PAGES/09b_onAllocations/">the previous section</a>, we introduced the fundamentals of memory allocations, highlighting that objects can be stored on either the heap or the stack. Furthermore, we emphasized the application of conventional terminology in programming and Julia, where <strong>allocations exclusively refer to those on the heap</strong>. This definition also gives rise to the expression that &quot;an object allocates&quot; when the object is stored on the heap.</p>
 <p>The distinction isn&#39;t merely to economize on words. Rather, it reflects that heap allocations are the ones that matter when it comes to performance: they involve a more complex memory management, which can significantly hinder performance.</p>
 <p>In fact, the close relationship between performance and heap allocations can be appreciated through the macros <code>@time</code> and <code>@btime</code>. To provide a comprehensive measure of performance, they not only return the total runtime of an operation, but additionally the heap allocations involved. </p>
 <p>In the following, we initiate our analysis of memory allocation by categorizing objects into two groups: those that allocate and those that don&#39;t.</p>
@@ -2995,7 +2995,7 @@ foo&#40;x&#41; &#61; sum&#40;x .* x&#41;                # 1 allocation from temp
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
