--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -2831,7 +2831,7 @@ color: white;
 <div class="franklin-content">
  <div class="note" style="width:62%" id=remarkCodeContent>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
-      <b> Code Script</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/09f_reductions/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.3.  </div>  </div>  <div style="margin-bottom:-2em"></div>
+      <b> Code Script</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/09f_reductions/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.6.  </div>  </div>  <div style="margin-bottom:-2em"></div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2839,7 +2839,7 @@ color: white;
         <h2>Introduction</h2></p>
 <p><span style="color: rgb(62, 121, 180);"><strong>Reductions</strong></span> are a powerful technique for <strong>operations that take collections as inputs and return a single element</strong>. They arise naturally when we need to compute summary statistics such as an average, variance, or maximum of a collection. </p>
 <p>The reduction process works by iteratively applying an operation to pairs of elements, accumulating the results at each step until the final output is obtained. For example, to compute <code>sum&#40;x&#41;</code> for a vector <code>x</code>, a reduction would start by adding the first two elements, then add the third element to the total, and continue this cumulative process until all elements have been summed.</p>
-<p>The method is particularly convenient when we need to transform a vector&#39;s elements prior to computing a summary statistic. By operating on scalars, <strong>reductions sidestep the need of materializing intermediate outputs</strong>, thereby reducing memory allocations. This means that, if for example you have to compute <code>sum&#40;log.&#40;x&#41;&#41;</code>, a reduction would avoid the creation of the intermediate vector <code>log.&#40;x&#41;</code>.</p>
+<p>The method is particularly convenient when we need to transform a vector&#39;s elements prior to computing a summary statistic. By operating on scalars, <strong>reductions sidestep the need to materialize intermediate outputs</strong>, thereby reducing memory allocations. This means that, if for example you have to compute <code>sum&#40;log.&#40;x&#41;&#41;</code>, a reduction would avoid the creation of the intermediate vector <code>log.&#40;x&#41;</code>.</p>
 <p>      </div>
     </div>
   </div>
@@ -3379,7 +3379,7 @@ foo&#40;x&#41; &#61; reduce&#40;&#43;, map&#40;a -&gt; 2 * a, x&#41;&#41;</code>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 20, 2025 
+          © Martin Alfaro <br>Last Modified August 16, 2025 
       </span> 
   </div> 
 </footer>
