--- a/PAGES/10e_simd_unitStrides/index.html
+++ b/PAGES/10e_simd_unitStrides/index.html
@@ -2838,7 +2838,7 @@ color: white;
 <p>For SIMD to fully exploit this vector-based processing, <strong>data should be organized and accessed in memory</strong> in specific ways. Two fundamental concepts for understanding this are contiguous memory layout and unit stride access.</p>
 <p><span style="color: rgb(62, 121, 180);"><strong>Contiguous memory layout</strong></span> means that data elements reside in adjacent memory addresses, therefore not exhibiting gaps. Newly allocated arrays satisfy this condition, enabling the load of entire segments directly into vector registers. In contrast, array views reference the original data structure, and thus don&#39;t guarantee contiguity. This can potentially result in highly irregular memory access patterns.</p>
 <p>In addition, <span style="color: rgb(62, 121, 180);"><strong>strides</strong></span> refer to the step size between consecutive memory accesses, with <span style="color: rgb(62, 121, 180);"><strong>unit strides</strong></span> in particular entailing that elements are accessed sequentially. For example, consider a freshly allocated vector <code>x</code>. Then, accessing its elements through <code>eachindex&#40;x&#41;</code> &#40;or equivalently <code>1:length&#40;x&#41;</code>&#41; ensures a unit stride, as each access moves sequentially to the next element in memory. This contrast with ranges having a non-unit stride such as <code>1:2:length&#40;x&#41;</code> or indices with no predictable pattern &#40;e.g., <code>&#91;1, 5, 3, 4&#93;</code> as an index vector&#41;. </p>
-<p>When it comes to performance, <strong>SIMD is most effectively applied when data is stored in a contiguous memory block and accessed in a unit stride pattern</strong>. This has significant practical implications for the approach to creating slices, where the options are given by copies or views. Essentially, this choice gives rise to a trade-off, as views reduce memory allocations but at the expense of hindering computational efficiency. This section explores such a decision.</p>
+<p>When it comes to performance, <strong>SIMD is most effectively applied when data is stored in a contiguous memory block and accessed in a unit stride pattern</strong>. This has significant practical implications for creating slices, which can take the form of copies or views. Essentially, this choice gives rise to a trade-off, as views reduce memory allocations but at the expense of hindering computational efficiency. This section explores such a decision.</p>
 <p>      </div>
     </div>
   </div>
@@ -3400,7 +3400,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified August 16, 2025 
+          © Martin Alfaro <br>Last Modified August 17, 2025 
       </span> 
   </div> 
 </footer>
